# BoBe

./: .gitignore  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_ISSUES.md  Cargo.toml  LICENSE  README.md  RUST_GUIDELINES.md  SECURITY.md  STREAMING_ANALYSIS.md  STREAMING_EXPLORATION_INDEX.md  STREAMING_ISSUES_DIAGRAM.txt  clippy.toml  deny.toml  justfile  unresolved_code_comments.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
BoBeMacUI/: Package.swift  appcast.example.xml
BoBeMacUI/BoBe/App/: BoBeApp.swift  MoveToApplications.swift  (+4 more)
BoBeService/: Cargo.toml  deny.toml
BoBeService/src/: config.rs  error.rs
BoBeService/src/api/: middleware.rs
BoBeService/src/api/handlers/: conversation.rs  events.rs  goals.rs  health.rs  memories.rs  models.rs  onboarding.rs  settings.rs  setup.rs  user_profile.rs
BoBeService/src/assets/defaults/: SOUL.md  USER_PROFILE.md
BoBeService/src/binary_manager/: extract.rs
BoBeService/src/bootstrap/: database.rs  mod.rs
BoBeService/src/config_manager/: persistence.rs
BoBeService/src/db/: agent_job_repo.rs  conversation_repo.rs  cooldown_repo.rs  memory_repo.rs  user_profile_repo.rs
BoBeService/src/i18n/locales/de-DE/: onboarding.ftl
BoBeService/src/i18n/locales/el-GR/: onboarding.ftl  prompts.ftl
BoBeService/src/i18n/locales/en-US/: onboarding.ftl
BoBeService/src/i18n/locales/es-ES/: onboarding.ftl
BoBeService/src/i18n/locales/fr-FR/: onboarding.ftl  prompts.ftl
BoBeService/src/i18n/locales/ja-JP/: onboarding.ftl  prompts.ftl
BoBeService/src/i18n/locales/ko-KR/: onboarding.ftl
BoBeService/src/i18n/locales/pt-BR/: onboarding.ftl
BoBeService/src/i18n/locales/zh-CN/: onboarding.ftl
BoBeService/src/llm/: circuit_breaker.rs  factory.rs  mod.rs  ollama_manager.rs
BoBeService/src/llm/providers/: llamacpp.rs  mod.rs  openai.rs
BoBeService/src/models/: agent_job.rs  conversation.rs  ids.rs  memory.rs  soul.rs
BoBeService/src/runtime/: proactive_generator.rs  response_streamer.rs  session.rs
BoBeService/src/runtime/learners/: capture_learner.rs
BoBeService/src/runtime/prompts/: agent_job_evaluation.rs  decision.rs  mod.rs  response.rs
BoBeService/src/runtime/triggers/: agent_job_trigger.rs  capture_trigger.rs  mod.rs
BoBeService/src/services/: context_assembler.rs  conversation_service.rs  mcp_config_service.rs  ollama_runtime_service.rs  setup_service.rs  soul_service.rs
BoBeService/src/services/goal_worker/: context_provider.rs
BoBeService/src/services/goals/: goals_service.rs
BoBeService/src/tools/: executor.rs  preselector.rs
BoBeService/src/tools/mcp/: adapter.rs  client.rs  config.rs  mod.rs
BoBeService/src/tools/native/: adapter.rs  base.rs  browser_history.rs  create_memory.rs  discover_installed_tools.rs  file_reader.rs  get_souls.rs  launch_coding_agent.rs  mod.rs  path_validation.rs  reject_plan.rs  resume_goal.rs  search_context.rs  search_files.rs
BoBeService/src/util/: mod.rs  paths.rs  slugify.rs
BoBeService/src/util/capture/: capture_result.rs
BoBeService/src/util/sse/: types.rs
BoBeService/supply-chain/: config.toml
desktop/: .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  README.md  electron-vite.config.ts  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
desktop/docs/: ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_GUIDELINES.md  BEST_PRACTICES.md  ProjectDescription.md  SYSTEM_DESIGN.md  TODO.md  TerminalAndCLITools.instructions.md
desktop/e2e/: tsconfig.json
desktop/packaging/: build-dmg.sh  build-service-bundle.sh  checksums.txt
desktop/resources/: icon.icns  logo-bw-inverted-tray.icns  logo-bw-tray.icns
desktop/scripts/: set-fuses.ts
desktop/src/: index.html  settings.html  setup.html
desktopMac/: .swiftformat  .swiftlint.yml  Info.plist  Package.resolved  Package.swift  project.yml
docs/: CODE_SIGNING.md  RUST_GUIDELINES.md  UpdatingOTA.md  architecture-translation.md  dead-code-dual-implementation-audit.md
migrations/: 001_initial.sql  002_add_indexes.sql  003_goal_plans.sql  schema.sql
src/: app_state.rs  bootstrap.rs  config.rs  config_manager.rs  constants.rs  error.rs  lib.rs  main.rs  secrets.rs
src/adapters/: logging.rs  mod.rs
src/api/: middleware.rs  mod.rs  router.rs
src/application/: mod.rs
src/binary_manager/: download.rs  extract.rs  mod.rs
src/bootstrap/: database.rs  infra.rs  integrity.rs  mod.rs  repos.rs  wiring.rs
src/composition/: bootstrap.rs  config_manager.rs  config_persistence.rs  container.rs  db_seeding.rs  mod.rs
src/config_manager/: fields.rs  migration.rs  mod.rs  persistence.rs
src/db/: agent_job_repo.rs  conversation_repo.rs  cooldown_repo.rs  goal_plan_repo.rs  goal_repo.rs  learning_state_repo.rs  mcp_config_repo.rs  memory_repo.rs  mod.rs  observation_repo.rs  seeding.rs  soul_repo.rs  user_profile_repo.rs
src/domain/: agent_job.rs  conversation.rs  cooldown.rs  goal.rs  memory.rs  mod.rs  observation.rs  soul.rs  types.rs  user_profile.rs
src/entrypoints/: app.rs  error_handler.rs  middleware.rs  mod.rs
src/i18n/: mod.rs
src/llm/: circuit_breaker.rs  embedding.rs  factory.rs  mod.rs  ollama_manager.rs  shared.rs  swappable.rs  types.rs
src/models/: agent_job.rs  conversation.rs  cooldown.rs  goal.rs  goal_plan.rs  learning_state.rs  mcp_server_config.rs  memory.rs  mod.rs  observation.rs  soul.rs  types.rs  user_profile.rs
src/ports/: embedding.rs  llm.rs  llm_types.rs  mod.rs  tools.rs
src/runtime/: decision_engine.rs  message_handler.rs  mod.rs  proactive_generator.rs  response_streamer.rs  sentence_accumulator.rs  session.rs  state.rs
src/services/: agent_job_manager.rs  agent_output_parsers.rs  context_assembler.rs  conversation_service.rs  mcp_config_service.rs  mod.rs  setup_service.rs  soul_service.rs
src/shared/: ids.rs  mod.rs
src/tools/: executor.rs  mod.rs  preselector.rs  registry.rs  tool_call_loop.rs
src/util/: clock.rs  ids.rs  logging.rs  mod.rs  network.rs  similarity.rs  slugify.rs  text.rs  tokens.rs
(+462 files in other folders)
