[package]
name = "bobe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3"
arc-swap = "1.8.2"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.32"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
once_cell = "1.21.3"
dirs = "6.0.0"
walkdir = "2.5.0"
url = "2.5.8"
which = "8.0.0"
libc = "0.2.182"
base64 = "0.22.1"
rand = "0.10.0"
hostname = "0.4.2"
mdns-sd = { version = "0.18.0", features = ["async"] }
