[package]
name = "bobe"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints project-wide
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
manual_let_else = "allow"
single_match_else = "allow"
match_wildcard_for_single_variants = "allow"
unused_self = "allow"
items_after_statements = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unnecessary_wraps = "allow"
uninlined_format_args = "allow"
unused_async = "allow"
redundant_else = "allow"
wildcard_imports = "allow"
implicit_clone = "allow"
trivially_copy_pass_by_ref = "allow"
needless_lifetimes = "allow"
redundant_closure_for_method_calls = "allow"
needless_raw_string_hashes = "allow"
match_same_arms = "allow"
manual_string_new = "allow"
semicolon_if_nothing_returned = "allow"
option_option = "allow"
map_unwrap_or = "allow"
needless_borrows_for_generic_args = "allow"
format_push_string = "allow"
match_bool = "allow"
manual_assert = "allow"
clone_on_ref_ptr = "allow"
bool_to_int_with_if = "allow"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_literal_bound = "allow"
assigning_clones = "allow"
if_not_else = "allow"
needless_continue = "allow"
ignored_unit_patterns = "allow"
missing_fields_in_debug = "allow"
range_plus_one = "allow"
incompatible_msrv = "allow"
implicit_hasher = "allow"
case_sensitive_file_extension_comparisons = "allow"
unchecked_time_subtraction = "allow"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
arc-swap = "1.8.2"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
dirs = "6.0.0"
walkdir = "2.5.0"
url = "2.5.8"
which = "8.0.0"
libc = "0.2.182"
base64 = "0.22.1"
rand = "0.10.0"
mdns-sd = { version = "0.18.0", features = ["async"] }
