[package]
name = "bobe"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
authors = ["The BoBe Authors"]
homepage = "https://www.bobebot.com"
repository = "https://github.com/athatheo/BoBe"
publish = false

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
elided_lifetimes_in_paths = "warn"
let_underscore_drop = "warn"           # Catch silent drops of values with Drop impls

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Debug leftovers: these should never ship in a daemon ---
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

# --- Restriction lints: cherry-picked for safety ---
clone_on_ref_ptr = "warn"              # Arc::clone(&x) over x.clone()
unwrap_used = "warn"                   # No .unwrap() in production
expect_used = "warn"                   # No .expect() in production
undocumented_unsafe_blocks = "warn"    # SAFETY comments required on unsafe
multiple_unsafe_ops_per_block = "warn" # One unsafe op per block, independently justified
exit = "warn"                          # No process::exit() in daemon

# --- Justified allows: architecture-driven (see CLAUDE.md for rationale) ---

# Internal app, not a public crate — naming/docs norms don't apply
module_name_repetitions = "allow" # config::ConfigManager is normal
missing_errors_doc = "allow"      # not a public crate
must_use_candidate = "allow"      # not a library
doc_markdown = "allow"            # internal docs only
implicit_hasher = "allow"         # not a library

# DTOs/config structs match API contracts
struct_excessive_bools = "allow"  # config/settings DTOs have many bool fields
struct_field_names = "allow"      # DTO fields match API contracts
missing_fields_in_debug = "allow" # partial Debug is fine

# Axum framework requirements
unused_async = "allow"            # all instances are Axum handler signatures
unused_self = "allow"             # all instances are trait implementation contracts

# Design patterns — intentional ownership/clone semantics
needless_pass_by_value = "allow"  # ~90% intentional ownership for DI/storage/repos
implicit_clone = "allow"          # all instances intentional — serialization, prompting, API
unnecessary_wraps = "allow"       # Result<Option<T>> is intentional for idempotent repo ops

# Cast safety — all verified safe in context
cast_possible_truncation = "allow" # config→bounds expansions, loop counters bounded by config
cast_sign_loss = "allow"           # expanding types or FFI-required
cast_precision_loss = "allow"      # f64 precision loss acceptable
cast_possible_wrap = "allow"       # FFI requirement (libc expects c_int)
cast_lossless = "allow"            # only 1-2 instances, style-only

# Style preferences
return_self_not_must_use = "allow" # builder patterns
similar_names = "allow"            # id/idx noisy false positives
needless_lifetimes = "allow"       # explicit lifetimes sometimes clearer
items_after_statements = "allow"   # helper closures after use is fine
too_many_lines = "allow"           # some handlers are legitimately long
incompatible_msrv = "allow"        # false positives with deps
trivially_copy_pass_by_ref = "allow" # trait impls and handler signatures
unnecessary_literal_bound = "allow"  # 56 tool trait impls return &str literals — changing trait sig is churn

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
arc-swap = "1.8.2"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
toml_edit = "0.25.3"
flate2 = "1.1.9"
tar = "0.4.44"
security-framework-sys = "2.17.0"
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
futures = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
dirs = "6.0.0"
walkdir = "2.5.0"
url = "2.5.8"
which = "8.0.1"
libc = "0.2.182"
base64 = "0.22.1"
rand = "0.10.0"
mdns-sd = { version = "0.18.1", features = ["async"] }
rustix = { version = "1.1.4", features = ["fs"] }
dashmap = "6.1.0"
scraper = "0.25.0"
moka = { version = "0.12.14", features = ["future"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tiktoken-rs = "0.9.1"
tower = { version = "0.5.3", features = ["timeout", "limit"] }
fluent-bundle = "0.16.0"
fluent-templates = "0.13.3"
sys-locale = "0.3.2"
unic-langid = "0.9.6"
